# heterogeneous_dev

./: .gitignore  README.md
cuda_dev/SGEMM/: CMakeLists.txt  build.sh  kernels.cu  kernels.hxx  sgemm.cxx  wmma_gemm.cu
cuda_dev/ThMoPPO/ch10/: CMakeLists.txt  matmul.cu  matmul_4x4.cu  matmul_multiblock.cu  matmul_shared.cu  reduce.cu  reduce_unroll.cu  sumarrays.cu  transpose.cu
cuda_dev/ThMoPPO/common/: common.cu  common.h
cuda_dev/professional_cuda_c_programing/ch01/: CMakeLists.txt  helloGPU.cu
cuda_dev/professional_cuda_c_programing/ch02/: CMakeLists.txt  checkDeviceInfor.cu  checkDimension.cu  checkThreadIndex.cu  defineGridBlock.cu  sumArraysOnGPU-small-case.cu  sumArraysOnGPU-timer.cu  sumArraysOnHost.c  sumMatrixOnGPU-1D-grid-1D-block.cu  sumMatrixOnGPU-2D-grid-1D-block.cu  sumMatrixOnGPU-2D-grid-2D-block.cu
cuda_dev/professional_cuda_c_programing/ch03/: CMakeLists.txt  reduceInteger.cu  simpleDeviceQuery.cu  simpleDivergence.cu
cuda_dev/professional_cuda_c_programing/ch04/: CMakeLists.txt  build.sh  globalvariable.cu  readsegment.cu  simplemathaos.cu  simplemathsoa.cu  transpose.cu  writesegment.cu
cuda_dev/professional_cuda_c_programing/ch05/: CMakeLists.txt  checksmemrectangle.cu  checksmemsquare.cu  reduce.cu  transpose.cu
cuda_dev/professional_cuda_c_programing/common/: common.h
docker/: Dockerfile  docker-compose.yml  requirements.txt  restart.sh  startup.sh
opencl_dev/cxx/heterogeneous_computing_with_opencl/ch01/: ch01.md
opencl_dev/cxx/heterogeneous_computing_with_opencl/ch02/: ch02.md
opencl_dev/cxx/heterogeneous_computing_with_opencl/ch03/: Makefile  main.cxx  maincxx.cxx  vecadd_kernel.cl
opencl_dev/cxx/heterogeneous_computing_with_opencl/ch04/convolution/: Makefile  build.sh  convolution.cl  convolution.cxx
opencl_dev/cxx/heterogeneous_computing_with_opencl/ch04/histogram/: Makefile  histogram.c  histogram.cl  histogram.cxx
opencl_dev/cxx/heterogeneous_computing_with_opencl/ch04/image-rotation/: Makefile  build.sh  image-rotation.c  image-rotation.cl  image-rotation.cxx
opencl_dev/cxx/heterogeneous_computing_with_opencl/ch04/producer-consumer/: Makefile  producer-consumer.cl  producer-consumer.cxx
opencl_dev/cxx/heterogeneous_computing_with_opencl/common/utils/: Makefile  bmp-utils.c  bmp-utils.hpp  utils.c  utils.h
opencl_dev/python/ch04/: ch04.ipynb  histogram.cl
